<resources>
    <string name="app_name">Consultation</string>
    <string name="turning_introducer_code">کد معرف (اختیاری)</string>
    <string name="turning_email">پست الکترونیکی (اختیاری)</string>
    <string name="turning_family">نام خانوادگی</string>
    <string name="turning_mobile">شماره همراه</string>
    <string name="txt_title">انتقادات و پشنهادات خود را از طریق فرم زیر ارسال نمایید.</string>
    <string name="txt_suggest">متن پیشنهاد خود را وارد نمایید</string>
    <string name="txt_criticize">متن انتقاد خود را وارد نمایید</string>
    <string name="txt_pishnahad">پیشنهاد</string>
    <string name="txt_enteghad">انتقاد</string>
    <string name="hint_name">نام</string>
    <string name="hint_family">نام خانوادگی</string>
    <color name="white">#fff</color>
    <string name="anatical">روانکاوی ارزان</string>
    <string name="clinic_address">ادرس مشهد</string>
    <string name="cv">رزومه</string>
    <string name="service">خدمات</string>
    <string name="map">مکان مرکز</string>
    <string name="accept_rules">شرایط و قوانین را می پذیرم</string>
    <string name="request_consult_name">مشاور :</string>
    <string name="request_consult_case">مورد مشاوره :</string>
    <string name="text_rules">مطالعه شرایط و قوانین</string>
    <string name="txt_share_comment">دوستان و آشنایان خود را با استفاده از گزینه به اشتراک گذاری به روان پژوه معرفی کنید.</string>
    <string name="txt_introduction_code">کد دعوت شما</string>
    <string name="btn_accept">تایید</string>
    <string name="address">آدرس</string>
    <string name="turning_consult_name">انتخاب مشاور</string>
    <string name="introducer_code">کد معرف</string>
    <string name="turning_name">نام</string>
    <string name="turning_consult_case">مورد مشاوره</string>
    <string name="hint_introducer_codee">کد معرف (اختیاری)</string>
    <string name="hint_mobile">شماره همراه (اختیاری)</string>
</resources>
