<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f0f2f2">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/llFamily"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:nextFocusDown="@+id/llPhoneNumber"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:fontFamily="@font/rayafa_font"
                            android:text="@string/hint_family"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/edtFamily"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center_vertical|center_horizontal|center"
                            android:fontFamily="@font/rayafa_font"
                            android:gravity="right"
                            android:hint="@string/hint_family"
                            android:inputType="text"
                            android:maxLength="20"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:textColor="#000"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:fontFamily="@font/rayafa_font"
                            android:text="@string/hint_name"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/edtName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:fontFamily="@font/rayafa_font"
                            android:gravity="right|center_vertical|center_horizontal|center"
                            android:hint="@string/hint_name"
                            android:inputType="text"
                            android:maxLength="15"
                            android:maxLines="1"
                            android:nextFocusDown="@+id/edtFamily"
                            android:padding="10dp"
                            android:textColor="#000"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_user" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llFamily"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llFamily">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:fontFamily="@font/rayafa_font"
                            android:text="@string/hint_mobile"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/edtMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:fontFamily="@font/rayafa_font"
                            android:gravity="right"
                            android:hint="09** *** ** **"
                            android:inputType="number"
                            android:maxLength="11"
                            android:maxLines="1"
                            android:textColor="#000"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_call" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llPhoneNumber"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llPhoneNumber">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/address"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edtAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right"
                            android:hint="@string/address"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="#000"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_home" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llIntroducer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llEmail"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llEmail">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/hint_introducer_codee"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edtIntroducer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right"
                            android:hint="@string/introducer_code"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="#000"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_offers" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_btn_send"
                    android:text="ویرایش"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/llIntroducer" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.constraint.ConstraintLayout>

</layout>