<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f0f2f2">

        <include
            android:id="@+id/toolbar"
            layout="@layout/action_bar_fragment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llFamily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/rayafa_font"
                    android:text="@string/hint_family"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edtFamily"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical|center_horizontal|center"
                    android:fontFamily="@font/rayafa_font"
                    android:gravity="right"
                    android:hint="@string/hint_family"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/rayafa_font"
                    android:text="@string/hint_name"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/rayafa_font"
                    android:gravity="right|center_vertical|center_horizontal|center"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/edtFamily"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_user" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llFamily">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/rayafa_font"
                    android:text="@string/turning_mobile"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/rayafa_font"
                    android:gravity="right"
                    android:hint="@string/turning_mobile"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:textColor="#000"
                    android:textSize="15sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_call" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llConsultName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llPhoneNumber">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/rayafa_font"
                    android:text="نام مشاور"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtConsultName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/rayafa_font"
                    android:gravity="right"
                    android:hint="نام مشاور"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_user" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llConsultName">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/rayafa_font"
                    android:text="گزارش تخلف"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ir.rayapars.consultation.classes.LinedEditText
                    android:id="@+id/edtDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="#79ffffff"
                    android:fontFamily="@font/rayafa_font"
                    android:gravity="top|right|center_vertical|center_horizontal|center"
                    android:hint="گزارش تخلف"
                    android:minHeight="130dp"
                    android:padding="8dp"
                    android:textColor="#000"
                    android:textColorHint="#b9afaf"
                    android:textSize="15sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_email" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="40dp"
            android:layout_weight="1"
            android:background="@drawable/background_btn_send"
            android:fontFamily="@font/rayafa_font"
            android:text="ارسال"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llMessage" />

    </android.support.constraint.ConstraintLayout>

</layout>